Restructure for better validation

--- a/TODO
+++ b/TODO
@@ -6,7 +6,8 @@ STANDALONE_MODE - make lib work without oscar
 Accounts can exclude shipping costs
 
 REST API:
-- handle creating user as part of create
-- handle invalid dates, amount in create request
-- handle invalid transfer in create request
 - include URLs of transfer and account in 201 response
+
+Error handling
+- return codes correctly
+- handle invalid transfer in create request
