--- a/TODO
+++ b/TODO
@@ -1,14 +1,14 @@
-Reports?
-Buying a product creates an account
-- including setting the recipient details
-
 STANDALONE_MODE - make lib work without oscar
-Accounts can exclude shipping costs
 
-REST API:
-- use 'merchant_reference' instead of 'order_number'
-- don't use auto-incrementing ID for transactions
+Core:
+- Accounts can exclude shipping costs
 
 Error handling
 - return codes correctly
 - handle invalid transfer in create request
+
+Shop integration:
+ - Buying a product creates an account
+
+Reports:
+- P&L report - for a given date range
